2006-08-18  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/datatypes.py (ConverterRegistry): add a remove method and
	make the add method a bit more robust

	* tests/test_datatypes.py: Add tests

	* po/kiwi.pot: Merge in new translations

	* po/sv.po: Update swedish translation
	* po/pt_BR.po: Update brazilian portuguese translation

2006-08-10  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/__init__.py: 
	* kiwi/__init__.py: 
	Move pygtk import to kiwi/__init__.py so it's called
	before gobject is tried to be imported.

2006-08-02  Aaron Spike   <aaron@ekips.org>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* AUTHORS:
	* kiwi/datatypes.py:
	* kiwi/ui/widgets/entry.py:
	* tests/test_datatypes.py:

	Add proper entry mask support on win32, fixes #2721.

2006-08-02  Ali Afshar <aafshar@gmail.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/gadgets.py:
	* kiwi/ui/widgets/entry.py:

	DateEntry breaks when set invalid, fixes #2720.

2006-07-25  Johan Dahlin  <jdahlin@async.com.br>

	reviewed by: Henrique Romano  <henrique@async.com.br>

	* gazpacho-plugin/kiwiwidgets.xml:
	* kiwi/ui/gazpacholoader.py:
	* kiwi/ui/widgets/button.py:
	* tests/test_proxy.py:

	Add ProxyButton support, Fixes #2698

2006-07-21  Ronaldo Maia <romaia@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/datatypes.py: Add a converter for gdk.Pixmap. Fixes #2697
	* tests/test_datatypes.py: and some tests.

2006-07-17  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/proxywidget.py (validate): validate widget when force is True,
	even if not visible nor sensitive. Fixes #2682

2005-03-29  Ali Afshar <aafshar@gmail.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	(ValidatableProxyWidgetMixin.set_invalid): 
	Set the background to red and set the tooltips if the fade is 
	disabled, fixes #2685

2006-07-13  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/proxywidget.py: